--- a/T6 - Creating Tables OCT 2022/tables.html
+++ b/T6 - Creating Tables OCT 2022/tables.html
@@ -10,7 +10,7 @@
       Author: Malayiah Mikell
       Date: 10/8/22
 
-      Filename:   my_pricing.html
+      Filename:   Tables.html
 
    -->
    
