--- a/T6 - Creating Tables OCT 2022/tables.html
+++ b/T6 - Creating Tables OCT 2022/tables.html
@@ -27,7 +27,7 @@
       <nav>
          <a id="navicon" href="#"><img src="fashion.jpg" alt=""></a>
          <ul>
-            <li><a href="https://student.germanna.edu/mdm27456/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">My Account</a></li>
             <li><a href="#">Shop</a></li>
             <li><a href="#">Support</a></li>
