--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p>Explore my projects below — each one reflects growth, creativity, and technical skill.</p>
 
   <ul style="list-style: none; padding: 0;">
-    <li><a href="T6-Tables/index.html" style="color: royalblue;">T6: Tables – Shoe Sizing Webpage</a></li>
+    <li><a href="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html" style="color: royalblue;">T6: Tables – Shoe Sizing Webpage</a></li>
     <!-- Add more projects as I upload them -->
   </ul>
 
