Update and rename mmedia.html to index.html

--- a/T8-Media/index.html
+++ b/T8-Media/index.html
@@ -27,8 +27,8 @@
 	  <nav>
          <a id="navicon" href="#"><img src="fashion.jpg" alt="Heels"></a>
          <ul>
-			<li><a href="https://student.germanna.edu/mdm27456/index.html">Home</a></li>
-			<li><a href="https://student.germanna.edu/mdm27456/tables.html">Shop</a></li>
+			<li><a href="https://malayiahm.github.io/web-dev-portfolio/">Home</a></li>
+			<li><a href="T6-Tables/index.html">Shop</a></li>
 			<li><a href="https://student.germanna.edu/mdm27456/form.html">Checkout</a></li>
             <li><a href="https://www.stevemadden.com/cart">My Cart</a></li>
             <li><a href="https://www.stevemadden.com/account">My Account</a></li>
@@ -70,4 +70,5 @@
       </nav>
    </footer>
 </body>
+
 </html>
