Update and rename form.html to index.html

--- a/T7-Forms/index.html
+++ b/T7-Forms/index.html
@@ -19,7 +19,7 @@
 <body>
    <header>
 	  <img src="fashion.jpg" alt="Heels" height="60" width="40" align="right" id="logoimg">
-      <form id="login" action="https://student.germanna.edu/mdm27456/tables.html" method="post">
+      <form id="login" action="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html" method="post">
           <input type="text" name="userName" id="userBox" placeholder="username">
           <input type="password" name="userPwd" id="pwBox" placeholder="password">
 		  <button type="submit">Login</button>
@@ -27,7 +27,7 @@
 	  <nav>
          <a id="navicon" href="#"><img src="fashion.jpg" alt="Heels"></a>
          <ul>
-			<li><a href="https://student.germanna.edu/mdm27456/tables.html">Shop</a></li>
+			<li><a href="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html">Shop</a></li>
             <li><a href="#">My Cart</a></li>
             <li><a href="#">My Account</a></li>
             <li><a href="#">Contact Us</a></li>
@@ -37,7 +37,7 @@
    
    <section>
       <h1>Payment Form</h1>
-        <form id="payment" action="https://student.germanna.edu/mdm27456/tables.html" method="post">
+        <form id="payment" action="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html" method="post">
           <fieldset id="billing">
               <legend>Billing Information (required)</legend>
               <label for="firstBox">First Name</label> 
@@ -166,4 +166,5 @@
       </nav>
    </footer>  
 </body>
+
 </html>
