--- a/T7-Forms/index.html
+++ b/T7-Forms/index.html
@@ -146,7 +146,7 @@
    <footer>
       <nav>
           <ul>
-            <li class="newgroup"><a href="#"><em>Home</em></a></li>
+            <li class="newgroup"><a href="https://malayiahm.github.io/web-dev-portfolio/"><em>Home</em></a></li>
             <li><a href="#">Keyword Search</a></li>
 			
             <li class="newgroup"><a href="#"><em>Fashion Week</em></a></li>
@@ -168,3 +168,4 @@
 </body>
 
 </html>
+
