--- a/T8-Media/index.html
+++ b/T8-Media/index.html
@@ -19,7 +19,7 @@
 <body>
 	<header>
 	  <img src="fashion-3.jpg" alt="Heels" height="60" width="40" id="logoimg">
-      <form id="login" action="https://student.germanna.edu/mdm27456/tables.html" method="post">
+      <form id="login" action="T6-Tables/index.html" method="post">
           <input type="text" name="userName" id="userBox" placeholder="username">
           <input type="password" name="userPwd" id="pwBox" placeholder="password">
 		  <button type="submit">Login</button>
@@ -28,8 +28,8 @@
          <a id="navicon" href="#"><img src="fashion.jpg" alt="Heels"></a>
          <ul>
 			<li><a href="https://malayiahm.github.io/web-dev-portfolio/">Home</a></li>
-			<li><a href="T6-Tables/index.html">Shop</a></li>
-			<li><a href="https://student.germanna.edu/mdm27456/form.html">Checkout</a></li>
+			<li><a href="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html">Shop</a></li>
+			<li><a href="T7-Form/index.html">Checkout</a></li>
             <li><a href="https://www.stevemadden.com/cart">My Cart</a></li>
             <li><a href="https://www.stevemadden.com/account">My Account</a></li>
 			
@@ -50,7 +50,7 @@
    <footer>
       <nav>
           <ul>
-            <li class="newgroup"><a href="https://student.germanna.edu/mdm27456/index.html"><em>Home</em></a></li>
+            <li class="newgroup"><a href="https://malayiahm.github.io/web-dev-portfolio/"><em>Home</em></a></li>
             <li><a href="https://www.stevemadden.com/pages/glossary-of-shoe-types-materials-and-construction">Keyword Search</a></li>
 			
             <li class="newgroup"><a href="https://www.stevemadden.com/collections/pink"><em>Fashion Week</em></a></li>
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
