--- a/T7-Form/index.html
+++ b/T7-Form/index.html
@@ -18,14 +18,14 @@
 
 <body>
    <header>
-	  <img src="fashion.jpg" alt="Heels" height="60" width="40" align="right" id="logoimg">
+	  <img src="fashion-3.jpg" alt="Heels" height="60" width="40" align="right" id="logoimg">
       <form id="login" action="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html" method="post">
           <input type="text" name="userName" id="userBox" placeholder="username">
           <input type="password" name="userPwd" id="pwBox" placeholder="password">
 		  <button type="submit">Login</button>
       </form>
 	  <nav>
-         <a id="navicon" href="#"><img src="fashion.jpg" alt="Heels"></a>
+         <a id="navicon" href="#"><img src="fashion-3.jpg" alt="Heels"></a>
          <ul>
 			<li><a href="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html">Shop</a></li>
             <li><a href="#">My Cart</a></li>
@@ -168,4 +168,5 @@
 </body>
 
 </html>
+
 
