--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
   <ul style="list-style: none; padding: 0;">
     <li><a href="T6-Tables/index.html" style="color: royalblue;">T6: Tables – Shoe Sizing Webpage</a></li>
-    <li><a href="T7-Form/index.html" style="color: royalblue;">T7: Media – Payment Form Webpage</a></li>
+    <li><a href="T7-Form/index.html" style="color: royalblue;">T7: Form – Payment Form Webpage</a></li>
     <li><a href="T8-Media/index.html" style="color: royalblue;">T8: Media – Fashion Webpage</a></li>
+    <li><a href="T9-Gallery/index.html" style="color: royalblue;">T9: Gallery – Gallery Webpage</a></li>
     <!-- Add more projects as I upload them -->
   </ul>
 
