Update and rename Gallery.html to index.html

--- a/T9-Gallery/index.html
+++ b/T9-Gallery/index.html
@@ -6,7 +6,7 @@
       Author: Malayiah Mikell
       Date:   10/31/2022
 
-      Filename: imaggallery.html
+      Filename: imagegallery.html
 
    -->
    
@@ -19,16 +19,16 @@
 <body>
    <header>
 	<div class="navbar">
-		<a href="https://student.germanna.edu/mdm27456/index.html">Home</a>
+		<a href="https://malayiahm.github.io/web-dev-portfolio/">Home</a>
 		<a href="https://www.stevemadden.com/collections/pink">News</a>
 		<div class="dropdown">
 			<button class="dropbtn">Dropdown
 				<i class="fa fa-caret-down"></i>
 			</button>
 			<div class="dropdown-content">
-				<a href="https://student.germanna.edu/mdm27456/mmedia.html">Overview</a>
-				<a href="https://student.germanna.edu/mdm27456/tables.html">Shop</a>
-				<a href="https://student.germanna.edu/mdm27456/form.html">Checkout</a>
+				<a href="https://malayiahm.github.io/web-dev-portfolio/T8-Media/index.html">Overview</a>
+				<a href="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html">Shop</a>
+				<a href="https://malayiahm.github.io/web-dev-portfolio/T7-Form/index.html">Checkout</a>
 			</div>
 		</div>
 	</div>
@@ -98,3 +98,4 @@ function showSlides() {
 
 </body>
 </html> 
+
