--- a/T9-Gallery/index.html
+++ b/T9-Gallery/index.html
@@ -13,7 +13,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>My Image Gallery</title>
-   <link href="image.css" rel="stylesheet">
+   <link href="Gallery.css" rel="stylesheet">
 </head>
 
 <body>
@@ -98,4 +98,5 @@ function showSlides() {
 
 </body>
 </html> 
+
 
