--- a/T8-Media/index.html
+++ b/T8-Media/index.html
@@ -29,7 +29,7 @@
          <ul>
 			<li><a href="https://malayiahm.github.io/web-dev-portfolio/">Home</a></li>
 			<li><a href="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html">Shop</a></li>
-			<li><a href="T7-Form/index.html">Checkout</a></li>
+			<li><a href="https://malayiahm.github.io/web-dev-portfolio/T7-Form/index.html">Checkout</a></li>
             <li><a href="https://www.stevemadden.com/cart">My Cart</a></li>
             <li><a href="https://www.stevemadden.com/account">My Account</a></li>
 			
@@ -72,6 +72,7 @@
 </body>
 
 </html>
+
 
 
 
