--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     /* Geometric Abstract Background */
     html {
       --size: 100px;
-      --orange: rgba(197, 107, 27, 0.25);  /* Rust orange with transparency */
-      --blue: rgba(108, 187, 203, 0.25);   /* Light sky blue with transparency */
-      --black: rgba(0, 0, 0, 0.25);        /* Black with transparency */
+      --orange: rgba(197, 107, 27, 0.25);  /* Rust orange */
+      --blue: rgba(108, 187, 203, 0.25);   /* Light sky blue */
+      --black: rgba(0, 0, 0, 0.25);        /* Black */
       --white: rgba(255, 255, 255, 0.6);   /* White outline */
 
     background-color: black;
