--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
   <style>
     /* Geometric Abstract Background */
     html {
-      --size: 100px;
-      --orange: rgba(197, 107, 27, 0.25);  /* Rust orange */
-      --blue: rgba(108, 187, 203, 0.25);   /* Light sky blue */
-      --black: rgba(0, 0, 0, 0.25);        /* Black */
-      --white: rgba(255, 255, 255, 0.6);   /* White outline */
+      --s: 84px; /* cube size */
+      --c1: rgba(197, 107, 27, 0.25);  /* Rust orange */
+      --c2: rgba(108, 187, 203, 0.25); /* Light sky blue */
+      --c3: rgba(0, 0, 0, 0.25);       /* Black */
 
-    background-color: black;
-    background-image:
-      linear-gradient(30deg, var(--orange) 33.3%, transparent 33.3%),
-      linear-gradient(150deg, var(--blue) 33.3%, transparent 33.3%),
-      linear-gradient(90deg, var(--black) 33.3%, transparent 33.3%),
-      linear-gradient(30deg, var(--white) 1px, transparent 1px),
-      linear-gradient(150deg, var(--white) 1px, transparent 1px),
-      linear-gradient(90deg, var(--white) 1px, transparent 1px);
-    background-size: var(--size) var(--size);
-    background-repeat: repeat;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    margin: 0;
-    padding: 0;
+      background-color: black;
+      background-image:
+        conic-gradient(at calc(250%/3) calc(100%/3), var(--c3) 0 120deg, transparent 0),
+        conic-gradient(from -120deg at calc(50%/3) calc(100%/3), var(--c2) 0 120deg, transparent 0),
+        conic-gradient(from 120deg at calc(100%/3) calc(250%/3), var(--c1) 0 120deg, transparent 0),
+        conic-gradient(from 120deg at calc(200%/3) calc(250%/3), var(--c1) 0 120deg, transparent 0),
+        conic-gradient(from -180deg at calc(100%/3) 50%, var(--c2) 60deg, var(--c1) 0 120deg, transparent 0),
+        conic-gradient(from 60deg at calc(200%/3) 50%, var(--c1) 60deg, var(--c3) 0 120deg, transparent 0),
+        conic-gradient(from -60deg at 50% calc(100%/3), var(--c1) 120deg, var(--c2) 0 240deg, var(--c3) 0);
+      background-size: calc(var(--s) * sqrt(3)) var(--s);
+      background-repeat: repeat;
+      font-family: 'Poppins', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0;
     }
     
     /*Loader animation for Header One */
