--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <style>
     /* Geometric Abstract Background */
     html {
-      --s: 84px; /* cube size */
-      --c1: rgba(197, 107, 27, 0.25);  /* Rust orange */
-      --c2: rgba(108, 187, 203, 0.25); /* Light sky blue */
-      --c3: rgba(0, 0, 0, 0.25);       /* Black */
+      --s: 84px; /* Cube size */
+      --c1: rgba(197, 107, 27, 0.25);  /* Rust orange (top face) */
+      --c2: rgba(108, 187, 203, 0.25); /* Light sky blue (left face) */
+      --c3: rgba(0, 0, 0, 0.25);       /* Black (right face) */
 
       background-color: black;
       background-image:
