--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     }
 
     a {
-      color: royalblue;
+      color: rgb(19,85,103);
       text-decoration: none;
       font-weight: bold;
       font-size: 1.2em;
@@ -90,13 +90,13 @@
      p.description {
       margin: 10px 0 0;
       font-size: 0.95em;
-      color: #e0e0e0;
+      color: rgb(240,240,240);
     } 
     
     footer {
       margin-top: 40px;
       font-size: 0.9em;
-      color: grey;
+      color: rgb(214,214,214);
     }
   </style>
 </head>
