--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       margin: 40px auto 0;
       padding: 20px;
       border-radius: 0 0 30px 30px;
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(11, 55, 52, 0.1);
       backdrop-filter: blur(6px);
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.42);
     }
 
     @keyframes l5 {
@@ -64,13 +64,13 @@
 
     /* Glassy Overlay */
     .glass-box {
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(11, 55, 52, 0.15);
       border-radius: 0 0 30px 30px;
       padding: 20px;
       margin: 20px auto;
       width: 80%;
       backdrop-filter: blur(8px);
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.42);
       color: white;
       text-align: center;
     }
@@ -107,26 +107,26 @@
   <p>Explore my projects below — each one reflects growth, creativity, and technical skill.</p>
 
   <ul>
-    <li><a href="T6-Tables/index.html" style="color: royalblue;">T6: Tables – Shoe Sizing Webpage</a></li>
+    <li><a href="T6-Tables/index.html" style="color: rgb(104,182,177);">T6: Tables – Shoe Sizing Webpage</a></li>
     <p class="description">
           Created during my associate’s degree, this project showcases a multi-page shoe sizing site using HTML tables and navigation features. 
           It emphasizes usability, visual balance, and structured layout. 
           <br><strong>Highlights:</strong> 5×6 shoe size chart, navigation menu, footer links, FTP deployment, validation cycles, and documentation.
     </p>
     </p>
-    <li><a href="T7-Form/index.html" style="color: royalblue;">T7: Form – Payment Form Webpage</a></li>
+    <li><a href="T7-Form/index.html" style="color: rgb(104,182,177);">T7: Form – Payment Form Webpage</a></li>
     <p class="description">
           My first web form project, designed to demonstrate mastery of input types, fieldsets, and buttons. It includes a login and payment form with 
           JavaScript-based redirection to the T6 homepage. I also implemented a datalist for state selection and field validation metrics.
           <br><strong>Highlights:</strong> Full form structure, creative field usage, FTP deployment, validation, and documentation.
     </p>
-    <li><a href="T8-Media/index.html" style="color: royalblue;">T8: Media – Fashion Webpage</a></li>
+    <li><a href="T8-Media/index.html" style="color: rgb(104,182,177);">T8: Media – Fashion Webpage</a></li>
     <p class="description">
           A media-rich fashion-themed page inspired by Steve Madden. Features a refined navigation bar with links to my GitHub homepage, shoe sizing table,
           and payment form. Includes an embedded YouTube video showcasing Cypress platform boots and a brief product description.
           <br><strong>Highlights:</strong> External/internal linking, embedded media, brand inspiration, and polished navigation.
     </p>
-    <li><a href="T9-Gallery/index.html" style="color: royalblue;">T9: Gallery – Gallery Webpage</a></li>
+    <li><a href="T9-Gallery/index.html" style="color: rgb(104,182,177);">T9: Gallery – Gallery Webpage</a></li>
     <p class="description">
           My first JavaScript-powered photo gallery using original seasonal images. Each photo transitions after a few seconds, creating a dynamic visual experience.
           This project emphasized image handling, transitions, and layout control.
