--- a/T7-Form/index.html
+++ b/T7-Form/index.html
@@ -37,7 +37,13 @@
    
    <section>
       <h1>Payment Form</h1>
-        <form id="payment" action="https://malayiahm.github.io/web-dev-portfolio/T6-Tables/index.html" method="post">
+
+	  <!--  Informational Message -->
+      <p class="description" style="text-align:center; font-style:italic; color:#ccc;">
+      	This form is for demonstration purposes only. No real data is processed, and a 405 error may appear if submitted directly.
+      </p>
+
+        <form id="payment" onsubmit="event.preventDefault(); window.location.href='https://malayiahm.github.io/web-dev-portfolio/';">
           <fieldset id="billing">
               <legend>Billing Information (required)</legend>
               <label for="firstBox">First Name</label> 
@@ -134,7 +140,7 @@
                 <option value="2024">2024</option>
           </select>
           <label for="cscBox">CSC</label>
-          <input name="csc" id="cscBox" type="text" pattern="^\d(3)$" maxlength="3"  placeholder="nnn" required>
+          <input name="csc" id="cscBox" type="text" pattern="^\d{3}$" maxlength="3"  placeholder="nnn" required>
         </fieldset>
         <button type="submit">
             <img src="fashion-3.jpg" height="20" width="20" alt="next">
@@ -168,6 +174,7 @@
 </body>
 
 </html>
+
 
 
 
